# FlaskWorkshopPOC

./: .env.example  .gitignore  Makefile  seed.sql  setup.cfg
src/app/: __init__.py  __main__.py  api.py  consts.py  database.py  security.py
