[metadata]
name = app
version = 0.0.1
author = Sigmanificient
platform = unix, linux
classifiers =
    Intended Audience :: Developers
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
include_package_data = True
packages =
    app
install_requires =
    Flask==2.2.2
    mysql-connector-python==8.0.27
python_requires = >=3.8
package_dir =
    =src
zip_safe = no


[options.extras_require]
dev =
    black>=22.6,<22.9

[options.entry_points]
console_scripts =
    app = app.__main__:main
